AdminHelm/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  labels:
    app.kubernetes.io/name: my-app
    app.kubernetes.io/instance: my-release
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
  selector:
    app.kubernetes.io/name: my-app
    app.kubernetes.io/instance: my-release
